--- a/index.html
+++ b/index.html
@@ -281,8 +281,13 @@
                     <p class="text__desc">FOXic</p>
                     <h3><a href="#">Small Dogs Food</a></h3>
                     <div class="bottom__swap">
-                        <p><span class="text__desc">$ 200</span>&nbsp;$ 180</p>
-                        <button>Add To Cart</button>
+                        <div class="cart">
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </div>
+                        <div class="swap">
+                            <button>Add To Cart</button>
+                            <p><span class="text__desc">$ 200</span>&nbsp;$ 180</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -308,8 +313,13 @@
                     <p class="text__desc">FOXic</p>
                     <h3><a href="#">Bird Cage</a></h3>
                     <div  class="bottom__swap">
-                        <p>$ 180</p>
-                        <button>Add To Cart</button>
+                        <div class="cart">
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </div>
+                        <div class="swap">
+                            <button>Add To Cart</button>
+                            <p>$ 180</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -333,8 +343,13 @@
                     <p class="text__desc">FOXic</p>
                     <h3><a href="#">12 Cans Pack Cats Food</a></h3>
                     <div class="bottom__swap">
-                        <p>$ 180</p>
-                        <button>Add To Cart</button>
+                        <div class="cart">
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </div>
+                        <div class="swap">
+                            <button>Add To Cart</button>
+                            <p>$ 180</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -362,8 +377,13 @@
                     <p class="text__desc">FOXic</p>
                     <h3><a href="#">Cat Activity Play Center</a></h3>
                     <div class="bottom__swap">
-                        <p><span class="text__desc">$ 149</span>&nbsp;$ 299</p>
-                        <button>Add To Cart</button>
+                        <div class="cart">
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </div>
+                        <div class="swap">
+                            <button>Add To Cart</button>
+                            <p><span class="text__desc">$ 149</span>&nbsp;$ 299</p>
+                        </div>
                     </div>
                 </div>
             </div>
